--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -13,29 +13,25 @@
     </div>
 
     <app-text-input [formControl]="$any(registerForm.controls['username'])" 
-        [label]="'Username'"></app-text-input>
+    [label]="'Username'"></app-text-input>
 
-    <app-text-input [formControl]="$any(registerForm.controls['knownAs'])" 
-        [label]="'Known As'"></app-text-input>
-    <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" 
-        [label]="'Date of Birth'" [maxDate]="maxDate" ></app-date-picker>
-    <app-text-input [formControl]="$any(registerForm.controls['city'])" 
-        [label]="'City'"></app-text-input>
-    <app-text-input [formControl]="$any(registerForm.controls['country'])" 
-        [label]="'Country'"></app-text-input>
+<app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" 
+    [label]="'Date of Birth'" [maxDate]="maxDate"></app-date-picker >
 
-    <app-text-input [formControl]="$any(registerForm.controls['password'])" 
-         [label]="'Password'" [type]="'password'"></app-text-input>
-    <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" 
-         [label]="'Confirm Password'" [type]="'password'"></app-text-input>
+<app-text-input [formControl]="$any(registerForm.controls['password'])" 
+    [label]="'Password'" [type]="'password'"></app-text-input>
 
-    <div class="row" *ngIf="validationErrors">
-        <ul class="text-danger">
-            <li *ngIf="let error of validationErrors">
-                {{error}}
-            </li>
-        </ul>
-    </div>
+<app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" 
+    [label]="'Confirm Password'"
+    [type]="'password'"></app-text-input>
+
+<div class="row" *ngIf="validationErrors">
+    <ul class="text-danger">
+        <li *ngFor="let error of validationErrors">
+            {{error}}
+        </li>
+    </ul>
+</div>
         
     <div class="text-center">
         <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
