--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -33,8 +33,8 @@
     </ul>
 </div>
         
-    <div class="text-center">
+    <div class="form-group text-center">
         <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
-        <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
+        <button class="btn btn-default " type="button" (click)="cancel()">Cancel</button>
     </div>
 </form>
